fix: avoid Java 9 collection factories on old Android